--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -26,7 +26,11 @@ header ul li {
 
 section {
   padding: 5%;
-  background-color: #f8f0fb;
+  background-color: #fdfdfd;
+}
+
+#pp2 { margin-bottom: 4em; 
+
 }
 
 h1,
