--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -33,13 +33,20 @@ section {
 
 }
 
-h1,
-h2,
-h3,
-h4,
+h1 {
+  color: #442696;
+  margin-bottom: 1em;
+}
+h3 {
+  color: #d6d85a;
+  margin-bottom: 1em;
+}
+h4 {
+  color: #afafaf;
+  margin-bottom: 1em;
+}
 h5 {
-  /*Purple*/
-  color: #6320ee;
+  color: #afafaf;
   margin-bottom: 1em;
 }
 
@@ -49,6 +56,7 @@ h1 {
 
 h2 {
   font-size: 175%;
+  color:#a0a0a0;
 }
 
 h3 {
@@ -111,7 +119,7 @@ footer {
 
 #oso2 {
   vertical-align: top;
-  border: 5px solid #fbff00;
+  border: 5px solid #c1c40dbe;
   margin-right: 15px;
 }
 
@@ -125,8 +133,8 @@ footer {
 }
 
 .tigers {
-  background-color: #0b3c49;
-  color: #f0e100;
+  background-color: #08485a;
+  color: #c5bc3f;
 }
 
 .giraffe {
