--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -153,7 +153,7 @@ footer {
   display: inline-block;
   background-color: white;
   padding: 10px;
-  margin: 10px;
+  margin: 5px;
   width: 30%;
   border: 1px solid black;
   border-radius: 10px;
@@ -177,9 +177,9 @@ footer {
 /*Education*/
 
 .education {
-  height: 500px;
+  height: 600px;
   background-image: url("https://source.unsplash.com/1200x900/?tiger");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   background-position: center;
   padding: 100px 5%;
@@ -191,16 +191,21 @@ footer {
   max-width: 400px;
 }
 
-.education-container h3,
-.education-container p {
-  margin-bottom: 1em;
-}
+.education-container h3
+{  margin-bottom: 1em;
+   font-size: 3em;
+  }
+.education-container p 
+{ margin-bottom: 1em;
+  font-size: 2em;
+ }
 
 /*Membership*/
 
 .membership {
   text-align: center;
   background-color: #fffffc;
+  font-weight: 700px;
 }
 
 .membership h2 {
