cambio de color con el cursor del boton de learning

--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -65,13 +65,18 @@ h3 {
 
 button {
   display: inline-block;
-  border-radius: 3px;
+  border-radius: 5px;
   cursor: pointer;
   padding: 10px 20px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
   background-color: #372772;
   border: 2px solid black;
   color: #fff;
+  
+
+}
+
+button:hover {background-color: gold;
 }
 
 footer {
@@ -223,7 +228,6 @@ footer {
 .programs .card {
   display: inline-block;
   
-
-
-
 }
+
+
