modificacion final pre pulir detalles

--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -230,4 +230,16 @@ footer {
   
 }
 
+#ppb {
+  background-color: #000000;
+  color:#7ebe05;
+}
 
+#Owl {background-color: #000000;
+  color:#7ebe05;
+padding: 20px;
+height: 500px;
+width: 800px;
+margin-left: auto;
+margin-top:auto;
+}
